[gd_scene load_steps=6 format=3 uid="uid://b42urip24pc51"]

[ext_resource type="PackedScene" path="res://scenes/music_loop_player.tscn" id="1"]
[ext_resource type="PackedScene" path="res://scenes/music_level.tscn" id="2"]
[ext_resource type="Script" path="res://scenes/door/door.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bwpwlyr4x51lk" path="res://assets/art/game/sprites/custom/door.png" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(16, 24)

[node name="door" type="Area2D"]
light_mask = 2
script = ExtResource("3")

[node name="music_loop_player" parent="." instance=ExtResource("1")]

[node name="music_level" parent="." instance=ExtResource("2")]
volume_db = -15.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4")
offset = Vector2(0, -2)
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("1")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_door_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
